v0.0.8
- removed control tests out of tc_field.rb into tc_control.rb 
- fixed some formatting
- changed control/field to controlfield/datafield
- added == check for controlfield
  removed namespace declarations on record elements in favor of default namespace on collection element
  added spaces around subfield code and delimeter in to_s

v0.0.7  Mon Jan  2 21:39:28 CST 2006
- MARC::XMLWriter added
- removed encode/decode methods in MARC::MARC21 into MARC::Writer and 
  MARC::Reader respectively. This required pushing MARC21 specific constants 
  out into MARC::Constants which is required as necessary.
- moved encode from MARC::MARXML into MARC::XMLWriter and added constants
  to MARC::Constants
- added MARC::XMLReader for reading MARX as XML
- added xml reading tests
- fixed indentation to be two spaces

v0.0.6  Tue Oct 18 09:33:12 CDT 2005
- MARC::MARC21::decode throws an exception when a directory can't be found.
  Exception is caught and ignored in MARC::ForgivingReader

v0.0.5  Tue Oct 18 01:50:40 CDT 2005
- when unspecified field indicators are forced to blanks
- checking for when a field appears to not have indicators and subfields in
  which case the field is skipped entirely

v0.0.4  Tue Oct 18 00:39:50 CDT 2005
- fixed off by one error when reading in leader, previous versions were
  reading an extra character

v0.0.3  Mon Oct 17 22:51:23 CDT 2005
- added ForgivingReader class and support for reading records without using
  possibly faulty offsets when the user needs them.

v0.0.2  Mon Oct 17 17:42:57 CDT 2005
- updated version string to see if it'll fix some gem oddness

v0.0.1  Mon Oct 10 10:29:20 CDT 2005
- initial release
